# HydraNSI

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/modules/: Find3Delight.cmake  FindHoudiniUSD.cmake  FindKatanaUSD.cmake
hdNSI/: CMakeLists.txt  README.md  accelerationBlurPlugin.cpp  accelerationBlurPlugin.h  camera.cpp  camera.h  cameraData.cpp  cameraData.h  compatibility.h  config.cpp  config.h  curves.cpp  curves.h  discoveryPlugin.cpp  discoveryPlugin.h  field.cpp  field.h  instancer.cpp  instancer.h  light.cpp  light.h  material.cpp  material.h  materialAssign.cpp  materialAssign.h  mesh.cpp  mesh.h  osoParserPlugin.cpp  osoParserPlugin.h  outputDriver.cpp  outputDriver.h  plugInfo.json  pointInstancer.cpp  pointInstancer.h  pointcloud.cpp  pointcloud.h  primvars.cpp  primvars.h  renderBuffer.cpp  renderBuffer.h  (+15 more)
hdNSI/osl/: CMakeLists.txt  NoLightingSurface.osl  UsdLuxLight.osl  UsdPreviewSurface.osl  UsdPrimvarReader_float.osl  UsdPrimvarReader_float2.osl  UsdPrimvarReader_float3.osl  UsdPrimvarReader_int.osl  UsdPrimvarReader_normal.osl  UsdPrimvarReader_point.osl  UsdPrimvarReader_string.osl  UsdPrimvarReader_vector.osl  UsdUVTexture.osl
